# pharo-vm-embedded-example

./: .project  CMakeLists.txt  README.md
scripts/: installSmalltalkCode.st
smalltalk-src/BaselineOfEmbeddedSupport/: BaselineOfEmbeddedSupport.class.st  package.st
smalltalk-src/Embedded-Support/: AthensCairoSurface.extension.st  CommandLineUIManager.extension.st  ESNullErrorHandler.class.st  ESSDLMessageErrorHandler.class.st  EmbeddedExampleCommandLineHandler.class.st  EmbeddedSupport.class.st  EmbeddedSupportCommandLineHandler.class.st  EmbeddedSupportGenerator.class.st  OSWorldRenderer.extension.st  OmFileStore.extension.st  PharoFilesOpener.extension.st  SDL2.extension.st  SDL2AthensExample.extension.st  SDLOSXPlatform.extension.st  SmalltalkImage.extension.st  package.st
smalltalk-src/Embedded-Support-Example/: EmbeddedExampleCommandLineHandler.class.st  package.st
smalltalk-src/Embedded-Support-OSX/: EmbeddedSupportGenerator.class.st  EmbeddedSupportOSXGenerator.class.st  package.st
smalltalk-src/Embedded-Support-Windows/: EmbeddedSupportWindowsGenerator.class.st  package.st
src/: embeddedImage.c  main.c  resources.rc.in
templates/Darwin/: Info.plist.template  build.sh.template  icon.icns
templates/Windows/: CMakeLists.txt.template  buildWindowsPackage.ps1.template
templates/Windows/include/: resources.h
templates/Windows/src/: embeddedImage.c  main.c.template  resources.rc.in
